[2.8] Crash when projecting skinwrap curve/path #56455

Closed
opened 2018-08-19 20:16:08 +02:00 by Maxximo Ramirez · 8 comments

System Information
I5 7600k
970 SC 4GB.
16GB. RAM
W10 x64

Blender Version
Broken: 20b30b6bee

Short description of error
Crash when projecting skinwrap curve/path into a model

Exact steps for others to reproduce the error
get a sphere model
add a path/curve around or inside it
add a skinwrap modifier
select 'project' on the modifier
blender crash

**System Information** I5 7600k 970 SC 4GB. 16GB. RAM W10 x64 **Blender Version** Broken: 20b30b6bee5 **Short description of error** Crash when projecting skinwrap curve/path into a model **Exact steps for others to reproduce the error** get a sphere model add a path/curve around or inside it add a skinwrap modifier select 'project' on the modifier blender crash

Added subscriber: @maxximoramirez

Added subscriber: @maxximoramirez

Added subscriber: @mont29

Added subscriber: @mont29

Please follow our submission template and guidelines, also read these tips about bug reports, and make a complete, valid bug report, with required info, precise description of the issue (only ONE issue per report!), precise steps to reproduce it, small and simple .blend and/or other files to do so if needed, etc.

Please follow our [submission template and guidelines](https:*developer.blender.org/maniphest/task/edit/form/1/), also read [these tips about bug reports](https:*wiki.blender.org/wiki/Process/Bug_Reports), and make a complete, valid bug report, with required info, precise description of the issue (only ONE issue per report!), precise steps to reproduce it, **small and simple** .blend and/or other files to do so if needed, etc.

Added subscriber: @zeauro

Added subscriber: @zeauro

I can reproduce.
In attached.blend file, just change modifier mode to Project to obtain crash.

path_in_ a_sphere_crash.blend

path_in_ a_sphere_crash.crash.txt

I can reproduce. In attached.blend file, just change modifier mode to Project to obtain crash. [path_in_ a_sphere_crash.blend](https://archive.blender.org/developer/F4355368/path_in__a_sphere_crash.blend) [path_in_ a_sphere_crash.crash.txt](https://archive.blender.org/developer/F4355372/path_in__a_sphere_crash.crash.txt)

This issue was referenced by 4cde92303f

This issue was referenced by 4cde92303f3db9286b38d65d835db3e358b595f4
Bastien Montagne self-assigned this 2018-08-23 21:49:59 +02:00

Thanks, confirmed.

Thanks, confirmed.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56455
No description provided.