Fix T56455: [2.8] Crash when projecting skinwrap curve/path.

Shrinkwrap is not only a Mesh modifier...